--- a/menu.html
+++ b/menu.html
@@ -16,12 +16,10 @@
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="list-unstyled">
                     <li><a href="#menu">横向菜单</a></li>
-                    <li><a href="#menu-hoverable">CSS Hover横向菜单</a></li>
-                    <li><a href="#button-icon-text">图标和文字按钮</a></li>
-                    <li><a href="#button-states">按钮状态</a></li>
-                    <li><a href="#button-color-variants">按钮皮肤</a></li>
-                    <li><a href="#button-sizes">按钮尺寸</a></li>
-                    <li><a href="#button-group">按钮组合</a></li>
+                    <li><a href="#menu-hoverable">横向菜单附加Hover下拉</a></li>
+                    <li><a href="#menu-vetical">纵向菜单</a></li>
+                    <li><a href="#menu-vetical-hoverable">纵向菜单附加Hover下拉</a></li>
+                    <li><a href="#menu-separator">分割线</a></li>
                 </ul>
             </div>
             <div class="ui-u-4-5">
@@ -42,7 +40,7 @@
                             </ul>
                         </div>
                     </div>
-                    <h3 id="menu-hoverable">CSS Hover横向菜单</h3>
+                    <h3 id="menu-hoverable">横向菜单附加Hover下拉</h3>
                     <div class="example">
                         <div class="ui-menu horizontal hoverable">
                             <ul>
@@ -71,65 +69,65 @@
                             </ul>
                         </div>
                     </div>
-                    <div>
-                        <h3>类型</h3>
-                        <div>
-                            <h4>横向菜单</h4>
-                            
-                            <h4>纵向菜单</h4>
-                            <div class="ui-menu vertical" style="width: 30%">
-                                <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li>
-                                        <a href="#">子菜单</a>
-                                        <ul class="ui-dropdown">
-                                            <li class="separator-below"><a href="#">First</a></li>
-                                            <li><a href="#">Second</a></li>
-                                            <li><a href="#">Third</a></li>
-                                            <li>
-                                                <a href="#">Right...</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">右侧子菜单 <i class="fa fa-arrow-right ui-icon"></i></a>
-                                        <ul class="ui-dropdown flyout right">
-                                            <li><a href="#">First</a></li>
-                                            <li class="separator-above"><a href="#">Second</a></li>
-                                            <li><a href="#">Third</a></li>
-                                            <li>
-                                                <a href="#">Right...</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">左侧子菜单</a>
-                                        <ul class="ui-dropdown flyout left">
-                                            <li><a href="#">First</a></li>
-                                            <li><a href="#">Second</a></li>
-                                            <li><a href="#">Third</a></li>
-                                            <li>
-                                                <a href="#">Right...</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <h4>下拉子菜单</h4>
-                            <div style="width: 200px;">
-                                <ul class="ui-dropdown">
-                                    <li class="heading">First</li>
-                                    <li class="separator-above"><a href="#">Second</a></li>
-                                    <li><a href="#">Third</a></li>
-                                    <li>
-                                        <a href="#">Right...</a>
-                                        <ul class="ui-dropdown flyout right">
-                                            <li><a href="#">First</a></li>
-                                            <li><a href="#">Second</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
+                    <h3 id="menu-vetical">纵向菜单</h3>
+                    <div class="example">
+                        <div class="ui-menu vertical" style="width: 30%">
+                            <ul>
+                                <li class="ui-menu-item">
+                                    <a href="#">产品介绍</a>
+                                </li>
+                                <li class="ui-menu-item">
+                                    <a href="#">子菜单</a>
+                                </li>
+                                <li class="ui-menu-item">
+                                    <a href="#">右侧子菜单</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3 id="menu-vetical-hoverable">纵向菜单附加Hover下拉</h3>
+                    <div class="example">
+                        <div class="ui-menu vertical hoverable" style="width: 30%">
+                            <ul>
+                                <li class="ui-menu-item">
+                                    <a href="#">产品介绍</a>
+                                </li>
+                                <li class="ui-menu-item">
+                                    <a href="#">下方子菜单</a>
+                                    <ul class="ui-dropdown">
+                                        <li><a href="#">First</a></li>
+                                        <li><a href="#">Second</a></li>
+                                        <li><a href="#">Third</a></li>
+                                    </ul>
+                                </li>
+                                <li class="ui-menu-item">
+                                    <a href="#">右侧子菜单</a>
+                                    <ul class="ui-dropdown flyout right">
+                                        <li><a href="#">First</a></li>
+                                        <li><a href="#">Second</a></li>
+                                        <li><a href="#">Third</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3 id="menu-separator">分割线</h3>
+                    <div class="example">
+                        <div class="ui-menu horizontal">
+                            <ul>
+                                <li class="ui-menu-item ui-menu-separator-before ui-menu-separator-after"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                                <li class="ui-menu-item ui-menu-separator-after"><a href="#"><i class="fa fa-rocket"></i> CSS Nested Menu</a></li>
+                                <li class="ui-menu-item ui-menu-separator-after"><a href="#">Active</a></li>
+                                <li class="ui-menu-item ui-menu-separator-after"><a href="#">Disabled</a></li>
+                            </ul>
+                        </div>
+                        <div class="ui-menu vertical mt3" style="width: 30%;">
+                            <ul>
+                                <li class="ui-menu-item ui-menu-separator-before ui-menu-separator-after"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                                <li class="ui-menu-item ui-menu-separator-after"><a href="#"><i class="fa fa-rocket"></i> CSS Nested Menu</a></li>
+                                <li class="ui-menu-item ui-menu-separator-after"><a href="#">Active</a></li>
+                                <li class="ui-menu-item"><a href="#">Disabled</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
