--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="pull-right">
                 <div class="ui-menu horizontal nav">
                     <ul>
-                        <li>
+                        <li class="ui-menu-item">
                             <a href="#"><i class="fa fa-magic"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-level-down"></i></a></li>
-                        <li><a href="#"><i class="fa fa-bell"></i></a></li>
-                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                        <li class="ui-menu-item"><a href="#"><i class="fa fa-level-down"></i></a></li>
+                        <li class="ui-menu-item"><a href="#"><i class="fa fa-bell"></i></a></li>
+                        <li class="ui-menu-item"><a href="#"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -30,12 +30,12 @@
         </header>
         <div class="est-body">
             <div id="left-nav">
-                <div class="ui-menu vertical nav">
+                <div class="ui-menu vertical nav hoverable">
                     <ul id="navigator">
-                        <li title="介绍"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
-                        <li title="CSS 栅格"><a href="css-grid.html" target="container-frame"><i class="fa fa-desktop"></i></a></li>
-                        <li title="table"><a href="table.html" target="container-frame"><i class="fa fa-table"></i></a></li>
-                        <li>
+                        <li class="ui-menu-item" title="介绍"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
+                        <li class="ui-menu-item" title="CSS 栅格"><a href="css-grid.html" target="container-frame"><i class="fa fa-desktop"></i></a></li>
+                        <li class="ui-menu-item" title="table"><a href="table.html" target="container-frame"><i class="fa fa-table"></i></a></li>
+                        <li class="ui-menu-item">
                             <a href="#">
                                 <i class="fa fa-check-square"></i>
                             </a>
@@ -46,10 +46,10 @@
                                 <li><a href="form.html" target="container-frame">表单</a></li>
                             </ul>
                         </li>
-                        <li><a href="menu.html" target="container-frame"><i class="fa fa-anchor"></i></a></li>
-                        <li><a href="icons.html" target="container-frame"><i class="fa fa-file-image-o"></i></a></li>
-                        <li><a href="type.html" target="container-frame"><i class="fa fa-text-height"></i></a></li>
-                        <li><a href="label.html" target="container-frame"><i class="fa fa-font"></i></a></li>
+                        <li class="ui-menu-item"><a href="menu.html" target="container-frame"><i class="fa fa-anchor"></i></a></li>
+                        <li class="ui-menu-item"><a href="icons.html" target="container-frame"><i class="fa fa-file-image-o"></i></a></li>
+                        <li class="ui-menu-item"><a href="type.html" target="container-frame"><i class="fa fa-text-height"></i></a></li>
+                        <li class="ui-menu-item"><a href="label.html" target="container-frame"><i class="fa fa-font"></i></a></li>
                     </ul>
                 </div>
             </div>
